--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,13 @@
 <div class="container">
     <h3>Employee Form</h3>
     <form #form="ngForm" novalidate>
-        <div class="form-group">
-            <label>First Name</label>
-            <input type="text" required class="form-control" name="firstName" [(ngModel)]="model.firstName">
+        <div class="form-group" [class.has-error]="firstName.invalid && firstName.touched">
+            <label class="control-label">First Name</label>
+            <input #firstName="ngModel" required pattern="...+" type="text" required class="form-control" name="firstName" [(ngModel)]="model.firstName">
+            <div *ngIf="firstName.invalid && firstName.touched" class="alert alert-danger">First Name is required.</div>
         </div> 
+
+        
         <div class="form-group">
             <label>Last Name</label>
             <input type="text" required class="form-control" name="lastName" [(ngModel)]="model.lastName">
@@ -25,9 +28,13 @@
                 <input type="radio" name="paymentType" value="1099" [(ngModel)]="model.paymentType">1099
             </label>
         </div>
-        <div class="form-group">
-            <label>Primary Language</label>
-            <select class="form-control" name="primaryLanguage" [(ngModel)]="model.primaryLanguage">
+        <div class="form-group" [class.has-error]="hasPrimaryLanguageError">
+            <label class="control-label">Primary Language</label>
+            <select class="form-control" #primaryLanguage name="primaryLanguage" 
+                (blur)="validatePrimaryLanguage(primaryLanguage.value)" 
+                (change)="validatePrimaryLanguage(primaryLanguage.value)"
+                [(ngModel)]="model.primaryLanguage">
+                <option value="default">Select a Language...</option>
                 <option *ngFor="let lang of languages">
                     {{ lang }}
                 </option> 
@@ -37,7 +44,8 @@
             <label>Date Hired</label>
             <input type="date" class="form-control">
         </div> 
-        <button type="submit" class="btn btn-primary">Ok</button>
+        <button type="submit" class="btn btn-primary"[disabled]="form.invalid">Ok</button>
+        <h3>{{ form.valid}}</h3>
     </form>
     Model: {{ model | json }}
     <br>
